# trello-backup

./: .env  .gitignore  .run  README.md  backup-and-save-to-project-data.sh  config.py  example-cli-output-backup-boards.txt  project-setup.sh  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  test-report.yml
modules/trello-backup/: config.py  output.py  trello-backup.py  webpage_title_cache.pickle
tests/: __init__.py  conftest.py  test_filter.py  test_integration.py  test_model.py  test_output_md_formatter.py  test_parser.py  test_service.py  test_utils.py
tests/resources/: attachments  board-cloudera.json  list_boards.json
tests/resources/boards/: board-cloudera.json  board-priorities,-learn,-misc.json  board-todo:-main-categories.json  board-weekly-plan.json
tests/resources/responses/: cards  checklists  list_boards.json  lists
trello-backup/: trello-backup.py
trello_backup/: cmd_handler.py  constants.py  exception.py  http_server.py  trello-backup.py  trello_backup.py  utils.py  webpage_title_cache.pickle
trello_backup/cli/: cli.py  common.py  context.py  prompt.py
trello_backup/cli/commands/: backup.py  cleanup.py  print.py
trello_backup/config/: config.json  secrets.json
trello_backup/config_parser/: config.py  config_validation.py
trello_backup/display/: console.py  converter.py  output.py  print.py  table.py
trello_backup/trello/: api.py  cache.py  controller.py  filter.py  html.py  model.py  parser.py  service.py
