[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "backup-manager"
version = "2.0.2"
description = ""
authors = ["Szilard Nemeth <szilard.nemeth88@gmail.com>"]
keywords = ["backup manager"]
readme = "README.md"
homepage = "https://github.com/szilard-nemeth/backup-manager"
repository = "https://github.com/szilard-nemeth/backup-manager"
packages = [{include = "modules"}]
include = [
"LICENSE"
]


[tool.poetry.dependencies]
python = "^3.11.0"
python-common-lib = "1.0.8"
google-api-wrapper2 = "1.0.6"
requests = "*"
rich = "13.4.1"
markdown = "3.4.4"


[tool.poetry.group.dev.dependencies]
requests = "*"
flake8 = "6.0.0"
pytest = "*"
pytest-html = "*"
pytest-cov = "*"
pre-commit = "*"
httpretty = "*"
black = "*"
autopep8 = "*"

[tool.poetry.group.localdev.dependencies]
python-common-lib = { path = "../python-commons/", develop = false }
google-api-wrapper2 = { path = "../google-api-wrapper", develop = false }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
